2010-01-29 13:57  rsbivand

	* DESCRIPTION, R/bin_link.R: plugin n/s bug fix

2010-01-15 16:51  rsbivand

	* DESCRIPTION, R/vect_link.R, ChangeLog, inst/ChangeLog: rgdal
	  version checking

2009-12-07 18:14  rsbivand

	* DESCRIPTION, R/initGRASS.R, man/initGRASS.Rd: trying QGIS

2009-11-08 08:58  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-11-08 08:04  rsbivand

	* DESCRIPTION, R/bin_link.R, R/vect_link.R, R/xml1.R,
	  man/readRAST6.Rd: protecting spaces in parameter values

2009-10-22 20:53  rsbivand

	* DESCRIPTION, R/vect_link.R, ChangeLog, inst/ChangeLog: fixing
	  locale problem

2009-09-23 11:27  rsbivand

	* DESCRIPTION, R/xml1.R, ChangeLog, inst/ChangeLog: no paramters in
	  interface description warning

2009-09-09 08:42  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-09-05 00:15  rsbivand

	* ChangeLog, inst/ChangeLog: fixing UTF-8

2009-09-04 23:53  rsbivand

	* DESCRIPTION, R/xml1.R, R/zzz.R, man/execGRASS.Rd,
	  man/initGRASS.Rd: fixing UTF-8

2009-09-02 15:42  rsbivand

	* DESCRIPTION, R/xml1.R: fix to get round parameters needing
	  multiple values having multiple=no in description

2009-08-14 18:20  rsbivand

	* R/bin_link.R, R/vect_link.R, ChangeLog, inst/ChangeLog: adding @
	  detection for plugin

2009-08-14 18:09  rsbivand

	* DESCRIPTION, R/bin_link.R, R/vect_link.R, ChangeLog,
	  inst/ChangeLog: adding @ detection for plugin

2009-05-24 11:28  rsbivand

	* DESCRIPTION, R/xml1.R, man/execGRASS.Rd, ChangeLog,
	  inst/ChangeLog: added multiple parameter support

2009-04-21 21:11  rsbivand

	* ChangeLog, R/bin_link.R, inst/ChangeLog: NODATA 999 test bug
	  fixed

2009-04-21 08:36  rsbivand

	* R/vect_link.R: guard against rgdal < 0.6-8

2009-04-16 18:04  rsbivand

	* R/initGRASS.R, R/vect_link.R, man/readVECT6.Rd: tidy

2009-04-16 11:38  rsbivand

	* ChangeLog, inst/ChangeLog: writeRAST6 arguments

2009-04-16 10:33  rsbivand

	* DESCRIPTION, R/bin_link.R, man/readRAST6.Rd: writeRAST6 arguments

2009-04-15 21:03  rsbivand
